hphp/hack/test/typecheck/reactive/nonrx2.php
<?hh // partial

// ERROR
<<__NonRx(1)>>
function f(): void {
}
